--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Satoshi', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -30,9 +30,19 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+h1{
+  color: #514B3E;
+  font-size: 40px;
+  font-family: "Satoshi", sans-serif;
+  font-weight: normal;
+  line-height: 1.5;
+}
+
+@font-face {
+  font-family: 'Satoshi';
+  src: url('/fonts/Satoshi-Bold.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
 }
 
 button {
